--- a/Plantilla.html
+++ b/Plantilla.html
@@ -159,7 +159,7 @@ ul.task-list li input[type="checkbox"] {
 <h3 class="anchored" data-anchor-id="anexos">Anexos</h3>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="Data/AI.png" class="img-fluid figure-img"></p>
+<p><img src="Data/IA.png" class="img-fluid figure-img"></p>
 <figcaption>Figura 5: Scanner de IA en un AI detector Fuente: Undetectable AI</figcaption>
 </figure>
 </div>
